MD-2004-06-17-0: Bugfix:    remove stat_log_time from configuration                              Changed:   inst_qmaster.sh
                 Review:    AS
                 Issue:     1082
                 Bugtraq:   5063305

SG-2004-06-16-0: Bugfix:    Fixes wrong info-messages handling in the scheduler
                            and the use of job categories for dispatching.
                 Review:    JG
                 Issue:     1087
                 Bugtraq:   5063311

MD-2004-06-16-0: Bugfix:    Install script fails when sgeadmin is selected 
                            as install user
                 Changed:   inst_qmaster.sh
                 Review:    JG
                 Issue:     1090

DT-2004-06-04-1: Bugfix:    o Fixed DRMAA Java binding build on Linux
                            o Added per thread init to japi_exit
                            o Fixed exit bug in TestDRMAA
                            o Removed old JNI files from JAPI directory
                            o Removed trailing garbage from German file staging
                              howto
                 Changed:   WWW, DRMAA

DT-2004-06-04-0: Enhancem.: o Added German translation of file staging howto
                            o Enhanced TestDRMAA
                 Changed:   WWW, DRMAA

DT-2004-06-03-5: Bugfix:    o Fixed API error in DRMAA Java binding
                 Enhancem.: o Expanded TestDRMAA program
                 Changed:   DRMAA

MD-2004-06-03-0: Bugfix:    typos, some messages, cleanup
                 Changed:   inst_sge, setfileperm.sh
                 Review:    AS
           
AS-2004-06-03-1:  Cleanup:   changed message when "qmod -X" mod is not done
                            because queue already has the specified state.

AS-2004-06-03-0: Bugfix:    formatting, typos of various text files

DT-2004-06-03-4: Bugfix:    o Fixed check-in problem with DT-2004-06-03-3
                 Changed:   DRMAA
